--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/jetstream": "^1.6",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.0"
+        "livewire/livewire": "^2.0",
+        "spatie/laravel-permission": "^3.18"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
